# poker-tracker-cpp

./: .clang-format  .clang-tidy  .code-checker-skip-files  .codechecker.json  .dockerignore  .env  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  MultiCPackConfig.cmake  MultiCPackConfigLinux.cmake  MultiCPackConfigWindows.cmake  README.md  docker-compose.yml  init.sh  main.cpp
.github/workflows/: build-docker-images.yml  main.yml
cmake/: helpers.cmake  mingw-w64-x86_64.cmake
docker/: Dockerfile-builder  Dockerfile-builder-dev  Dockerfile-builder-linux-clang  Dockerfile-builder-linux-clang-ci  Dockerfile-builder-linux-clang-dev  Dockerfile-builder-linux-gcc  Dockerfile-builder-linux-gcc-dev  Dockerfile-builder-linux-mingw  Dockerfile-builder-windows-mingw  Dockerfile-builder-windows-mingw-dev  Dockerfile-ci-deploy  Dockerfile-ci-linux-alpine-runner  Dockerfile-ci-linux-runner  Dockerfile-deploy  Dockerfile-dev-env  Dockerfile-linux-clang-ci  README.md  build_and_deploy_all.sh  docker-entrypoint-dev.sh  id_rsa  id_rsa.pub
docker/gitlab-runner/: register.sh  register_build.sh  register_code_quality.sh  register_host.sh  register_tests.sh  run.sh  run_build.sh  run_code_quality.sh  run_host.sh  run_tests.sh
documentation/: Templates.md
hooks/: pre-commit
services/: CMakeLists.txt
services/game_handler/: CMakeLists.txt  README.md
services/game_handler/include/: Board.hpp  Card.hpp  CardFactory.hpp  Game.hpp  Hand.hpp  Player.hpp  Round.hpp  RoundAction.hpp
services/game_handler/include/game_handler/: Board.hpp  Card.hpp  CardFactory.hpp  Game.hpp  Hand.hpp  Player.hpp  Round.hpp  RoundAction.hpp
services/game_handler/src/: Board.cpp  Card.cpp  CardFactory.cpp  Game.cpp  Hand.cpp  Player.cpp  Round.cpp  RoundAction.cpp
services/game_handler/tests/: BoardTest.cpp  CMakeLists.txt  CardFactoryTest.cpp  CardTest.cpp  GameTest.cpp  HandTest.cpp  PlayerTest.cpp  RoundActionTest.cpp  RoundTest.cpp  main.cpp
services/game_session/: CMakeLists.txt
services/game_session/include/: Session.hpp
services/game_session/include/game_session/: Session.hpp
services/game_session/resources/winamax/: game_1_3840x1080x8_25cts.json  game_sample_3840_1080_x8.webm
services/game_session/src/: Session.cpp
services/game_session/tests/: CMakeLists.txt  SessionTest.cpp
services/logger/: CMakeLists.txt
services/logger/include/: Logger.hpp
services/logger/src/: Logger.cpp
services/ocr/: CMakeLists.txt  README.md
services/ocr/include/: OcrFactory.hpp  OcrInterface.hpp  WinamaxOcr.hpp
services/ocr/include/ocr/: OcrFactory.hpp  OcrInterface.hpp  WinamaxOcr.hpp
services/ocr/src/: OcrFactory.cpp  OcrInterface.cpp  WinamaxOcr.cpp
services/ocr/tests/: CMakeLists.txt  WinamaxOcrTest.cpp
services/poker_game/: CMakeLists.txt
services/poker_game/include/: Card.hpp  CardFactory.hpp  Hand.hpp  Player.hpp  Round.hpp
services/poker_game/src/: Card.cpp  CardFactory.cpp  Hand.cpp  Player.cpp  Round.cpp
services/poker_game/tests/: CMakeLists.txt  CardFactoryTest.cpp  CardTest.cpp  HandTest.cpp
services/scraper/: CMakeLists.txt
services/scraper/include/: Model.hpp  ScraperFactory.hpp  ScraperInterface.hpp  WinamaxScraper.hpp
services/scraper/include/scraper/: Model.hpp
services/scraper/resources/winamax/: 3840x1080x8_coordinates.json
services/scraper/resources/winamax/models/: 3840x1080.json  3840x1080x8.json
services/scraper/src/: Model.cpp  ScraperFactory.cpp  ScraperInterface.cpp  WinamaxScraper.cpp
services/scraper/tests/: CMakeLists.txt  ModelTest.cpp  ScraperInterfaceTest.cpp  WinamaxScraperTest.cpp
services/utilities/: CMakeLists.txt
services/utilities/include/: Macros.hpp
services/utilities/include/utilities/: GtestMacros.hpp  Image.hpp  ImageMacros.hpp  Macros.hpp  Strings.hpp  Time.hpp
services/utilities/tests/: CMakeLists.txt
services/websockets/: CMakeLists.txt
services/websockets/include/: Server.hpp
services/websockets/include/websockets/: Server.hpp
services/websockets/src/: Server.cpp
services/websockets/tests/: CMakeLists.txt  ServerTest.cpp
src/poker/: CMakeLists.txt  Card.hpp  CardFactory.cpp  CardFactory.hpp  Player.hpp  Round.hpp  conanfile.txt
src/poker/tests/: CMakeLists.txt  CardFactory.cpp  CardTest.cpp
